<resources>
    <string name="app_name">E-Extension</string>
    <string name="hint_email">Enter Username</string>
    <string name="hint_password">Enter Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_link_to_register">Not a member? Sign up now.</string>
    <string name="btn_link_to_login">Already registred! Login Me.</string>
    <string name="welcome">Welcome to E-Extension</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="btn_farmerRegistration">FARMER REGISTRATION</string>
    <string name="btn_farmVisits">FARM VISITS</string>
    <string name="btn_sync">SYNC MY DATA</string>
    <string name="btn_review">REVIEW SAVED DATA</string>
    <string name="btn_report">E-Diary ONLINE</string>
    <string name="name">Fullname</string>
    <string name="title_with_progress">Attach Photo</string>
    <string name="title_without_progress">Upload Photo</string>
    <string name="error_message">Error occurred!</string>
    <string name="message_need_permission">Need Permissions</string>
    <string name="message_grant_permission">This app needs permission to use this feature. You can grant them in app settings.</string>
    <string name="label_setting">GOTO SETTINGS</string>
    <string name="cancel">Cancel</string>
    <string name="take_photo">Capture Photo</string>
    <string name="choose_gallery">Choose from Library</string>
    <string name="file_upload_successful">File has been uploaded successfully</string>
    <string name="first_seleted_media">First select file for upload</string>
    <string name="photo_warning">NB: You can only upload photos when having an active internet connection.</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string-array name="photo_type_ediary">
        <item>---Select Photo Type---</item>
        <item>Activity Photo</item>
        <item>Register of Attendees</item>
        <item>Farmer(s)</item>
    </string-array>
    <string-array name="chags">
        <item>Low production among members</item>
        <item>Lack of financing of business operations</item>
        <item>Changing weather conditions</item>
        <item>Lack of a sustainable source of funding</item>
        <item>Low member loyalty or commitment</item>
        <item>Mistrust among members</item>
        <item>Governance/poor leadership/greed</item>
        <item>Competition with other farmer organization</item>
        <item>Others</item>
    </string-array>
    <string-array name="fqnc">
        <item>Monthly</item>
        <item>Quarterly </item>
        <item>Twice a year</item>
        <item>Once a year</item>
        <item>Others</item>
    </string-array>
    <string-array name="activity">
        <item>Production activities</item>
        <item>Marketing activities</item>
        <item>Agro processing activities</item>
        <item>Non-agricultural activities</item>
    </string-array>
    <string-array name="event_type_1">

        <item>---Select Option---</item>
        <item>Disease</item>
        <item>Pest</item>
    </string-array>
    <string-array name="event_type_2">
        <item>---Select Option---</item>
        <item>Flood</item>
        <item>Hailstorm</item>
        <item>Landslide</item>
        <item>Storm</item>
        <item>Drought</item>
        <item>Heavy Rain</item>
    </string-array>
    <string-array name="education">
        <item>No Formal Education</item>
        <item>Some Primary</item>
        <item>Primary</item>
        <item>Some Secondary</item>
        <item>Secondary</item>
        <item>Tertiary</item>
    </string-array>
    <string-array name="region">
        <item>---SELECT REGION---</item>
        <item>CENTRAL</item>
        <item>EASTERN</item>
        <item>NORTHERN</item>
        <item>WESTERN</item>
    </string-array>
    <string-array name="catz">
        <item>---Select Categorization---</item>
        <item>Farmer</item>
        <item>Researcher</item>
        <item>Other Stakeholder</item>
    </string-array>
    <string-array name="catz_farmer">
        <item>---Select Categorization---</item>
        <item>Commercial Farmer</item>
        <item>Small Scale Farmer</item>
    </string-array>
    <string-array name="catz_farmer_group">
        <item>---Select Categorization---</item>
        <item>Farmer Group</item>
        <item>Community Based Organization</item>
        <item>ACCE</item>
        <item>VSLA</item>
    </string-array>
    <string-array name="validity">
        <item>Permanent</item>
        <item>Valid</item>
        <item>Expired</item>
    </string-array>
    <string-array name="market_type">
        <item>---Select Market Type---</item>
        <item>General Market</item>
        <item>Fruit Market</item>
        <item>Dairy Products Market</item>
        <item>Abattoir</item>
        <item>Small Markets</item>
        <item>Ranches</item>
        <item>Beaches</item>
        <item>Landing Sites</item>
        <item>Others</item>
    </string-array>
    <string-array name="volume_measures">
        <item>---Select Option---</item>
        <item>Bunches</item>
        <item>Boxes</item>
        <item>Bags</item>
        <item>Tonnes</item>
        <item>KGs</item>
    </string-array>
    <string-array name="price_measures">
        <item>---Select Option---</item>
        <item>Shillings/Bunch</item>
        <item>Shillings/Box</item>
        <item>Shillings/Bag </item>
        <item>Shillings/Tonne</item>
        <item>Shillings/Kg</item>
    </string-array>
    <string-array name="education_levelx">
        <item>---Select Option---</item>
        <item>No School at All</item>
        <item>Some Primary School</item>
        <item>Primary School</item>
        <item>Secondary School</item>
        <item>Some Tertiary School</item>
        <item>Under graduate Degree</item>
        <item>Post graduate Degree</item>
        <item>PhD</item>
    </string-array>
    <string-array name="language">
        <item>---Select Option---</item>
        <item>Acholi</item>
        <item>Adhola</item>
        <item>Alur</item>
        <item>Aringa</item>
        <item>Bari</item>
        <item>English</item>
        <item>Gishu</item>
        <item>Ik</item>
        <item>Itesot</item>
        <item>Karamojong</item>
        <item>Kuman</item>
        <item>Lango</item>
        <item>Luganda</item>
        <item>Lugbara</item>
        <item>Lunyole</item>
        <item>Lusoga</item>
        <item>Ma\'di</item>
        <item>Ndo</item>
        <item>Pokot</item>
        <item>Rufumbira</item>
        <item>Rukiga</item>
        <item>Rukonjo</item>
        <item>Runyankole</item>
        <item>Runyoro</item>
        <item>Rutoro</item>
        <item>Sabiny</item>
        <item>Swahili</item>
    </string-array>
    <string-array name="genderX">
        <item>---Select Gender---</item>
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string-array name="yes_no">
        <item>---Select Option---</item>
        <item>Yes</item>
        <item>No</item>
    </string-array>
    <string-array name="other_player_catz">
        <item>---Select Option---</item>
        <item>State Actor</item>
        <item>Non State Actor</item>
        <item>Irrigation Scheme</item>
        <item>Project</item>
        <item>Ware House/Storage Facility</item>
    </string-array>
    <string-array name="level_of_operation">
        <item>---Select Option---</item>
        <item>Parish level</item>
        <item>Subcounty Level</item>
        <item>District Level</item>
        <item>Country level</item>
        <item>Worldwide</item>
    </string-array>
    <string-array name="gNature">
        <item>---Select Grievance Nature---</item>
        <item>Fraud</item>
        <item>Land Dispute</item>
        <item>Compensation</item>
        <item>Environmental</item>
        <item>Social Issues</item>
        <item>Management</item>
        <item>E-Voucher System</item>
        <item>Input Dealers</item>
        <item>Others</item>
    </string-array>
    <string-array name="gReceipt">
        <item>---Select Option---</item>
        <item>App</item>
        <item>Email</item>
        <item>Telephone</item>
        <item>In Person</item>
        <item>Mail/Written</item>
        <item>SMS</item>
        <item>Website</item>
        <item>Meeting</item>
        <item>Suggestion Box</item>
        <item>Toll Free</item>
    </string-array>
    <string-array name="gSettlement">
        <item>---Select Option---</item>
        <item>Not Settled</item>
        <item>ACDP Management</item>
        <item>Police</item>
        <item>Courts of Law</item>
        <item>District Tribunal</item>
        <item>MAAIF Top Management</item>
        <item>Farmer Group</item>
        <item>Subcounty GRC</item>
        <item>District GRC</item>
        <item>UBA</item>
        <item>Agro-Input Dealer</item>
        <item>Compensation</item>
        <item>Document agreed actions</item>
        <item>Caution</item>
        <item>Apology</item>
        <item>Restitution/Restoration</item>
        <item>Giving Information</item>
    </string-array>
    <string-array name="feedbackmode">
        <item>---Select Option---</item>
        <item>App</item>
        <item>Email</item>
        <item>Telephone</item>
        <item>In Person</item>
        <item>Mail/Written</item>
        <item>SMS</item>
    </string-array>
    <string-array name="status_tp">
        <item>Higher (A collection of farmers groups/organizations e.g RPO &amp; ACCESS)</item>
        <item>Lower (Village based Farmer Group)</item>
    </string-array>
    <string-array name="fo_support">
        <item>None</item>
        <item>CBO</item>
        <item>Government</item>
        <item>NGO</item>
        <item>Private Company</item>
    </string-array>
    <string-array name="fo_tp">
        <item>Farmer Group</item>
        <item>Farmer Association</item>
        <item>Community Based Organizations</item>
        <item>RPO (Primary Cooperative)</item>
        <item>ACCE (Secondary Cooperative)</item>
        <item>Union</item>
    </string-array>
    <string-array name="fo_ops">
        <item>Village</item>
        <item>Parish</item>
        <item>Subcounty</item>
        <item>District</item>
        <item>Regional - multiple districts</item>
        <item>National - entire country</item>
    </string-array>
    <string-array name="fo_pos">
        <item>None</item>
        <item>Manager</item>
        <item>Extension officer(s)</item>
        <item>Accountant</item>
    </string-array>
    <string name="hd1">Section A : Location Details</string>
    <string name="hd2">Section B : Membership Details &amp; FO Type</string>
    <string name="hd3">Section C : Support Details &amp; FO Formation</string>
    <string name="hd4">Section D : Employee &amp; Membership Details</string>
    <string name="hd6">Section E : FO Leadership Details</string>
    <string name="hd7">Section F : FO Enterprises </string>
    <string name="hd8">Section G : FO Activity Involved In</string>
    <string name="hd9">Section H : FO Production Details</string>
    <string name="hd10">Section I : FO Meetings</string>
    <string name="hd11">Section J : FO challenges</string>
    <string name="hd12">Section K : FO References</string>
    <string name="ufg1">Farmer Organization Name</string>
    <string name="ufg2">GPS Latitude</string>
    <string name="ufg3">GPS Longitude</string>
    <string name="post_author_image_transition_name" translatable="false">post_author_image_transition_name</string>
    <string name="send_comment_button_label">Send</string>
    <string name="internet_connection_failed">No internet connection</string>
    <string name="comment_text_hint">Enter your response …</string>
</resources>