<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_main_new"
    tools:context="${relativePackage}.${activityClass}" >
    <ScrollView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        >
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:gravity="center"
            android:orientation="vertical" >


            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/logo_maaif"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome"
                android:textStyle="bold"
                android:textSize="24dp" />

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textColor="@color/lbl_name"
                android:textStyle="bold|italic"
                android:textSize="18dp" />



            <TextView
                android:id="@+id/district"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textColor="@color/lbl_name"
                android:textSize="16dp" />


            <TextView
                android:id="@+id/location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textColor="@color/lbl_name"
                android:textSize="12dp" />


            <Button
                android:id="@+id/btnAddNewPlannedActivity"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dip"
                android:background="@drawable/button_styles"
                android:text="@string/btn_farmerRegistration"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="15dp" />
            <Button
                android:id="@+id/btnAddUnplannedActivity"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dip"
                android:background="@drawable/button_styles"
                android:text="@string/btn_farmVisits"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="15dp" />
            <Button
                android:id="@+id/btnReviewSavedData"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dip"
                android:background="@drawable/button_styles"
                android:text="@string/btn_review"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="15dp" />
            <Button
                android:id="@+id/btnSyncMyData"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dip"
                android:background="@drawable/button_styles"
                android:text="@string/btn_sync"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="15dp" />
            <Button
                android:id="@+id/btnOnlineReport"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dip"
                android:background="@drawable/button_styles"
                android:text="@string/btn_report"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="15dp" />

            <Button
                android:id="@+id/btnLogout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dip"
                android:background="@drawable/button_logout"
                android:text="@string/btn_logout"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="15dp" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>